--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "file:.yalc/@wangeditor/editor-for-vue",
+    "element-plus": "^2.3.9",
     "pinia": "^2.1.4",
     "vue": "^3.3.4"
   },
@@ -28,8 +32,12 @@
     "eslint-plugin-vue": "^9.15.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "sass": "^1.65.1",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.6"
+  },
+  "peerDependencies": {
+    "snabbdom": "^3.5.1"
   }
 }
