--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "file:.yalc/@wangeditor/editor-for-vue",
     "element-plus": "^2.3.9",
+    "lodash.throttle": "^4.1.1",
     "pinia": "^2.1.4",
+    "snabbdom": "^3.5.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
+    "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^18.17.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -36,8 +39,5 @@
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.6"
-  },
-  "peerDependencies": {
-    "snabbdom": "^3.5.1"
   }
 }
