--- a/package.json
+++ b/package.json
@@ -1,44 +1,70 @@
 {
   "name": "ssml-editor",
-  "version": "1.0.0",
-  "private": true,
+  "private": false,
+  "version": "0.0.1",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.umd.js"
+    },
+    "./dist/style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+    "type-check": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "@wangeditor/editor": "^5.1.23",
-    "@wangeditor/editor-for-vue": "file:.yalc/@wangeditor/editor-for-vue",
-    "element-plus": "^2.3.9",
-    "lodash.throttle": "^4.1.1",
-    "snabbdom": "^3.5.1",
-    "vue": "^3.3.4",
-    "xml-formatter": "^3.5.0"
-  },
   "devDependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@rushstack/eslint-patch": "^1.3.2",
-    "@tsconfig/node18": "^18.2.0",
+    "@tsconfig/node20": "^20.1.1",
     "@types/lodash.throttle": "^4.1.7",
-    "@types/node": "^18.17.0",
+    "@types/node": "^20.5.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "file:.yalc/@wangeditor/editor-for-vue",
+    "dom7": "^3.0.0",
+    "element-plus": "^2.3.9",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "rollup-plugin-typescript2": "^0.35.0",
     "sass": "^1.65.1",
+    "snabbdom": "^3.5.1",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
-    "vue-tsc": "^1.8.6"
+    "vite-plugin-dts": "^2.3.0",
+    "vue": "^3.3.4",
+    "vue-tsc": "^1.8.6",
+    "xml-formatter": "^3.5.0"
+  },
+  "peerDependencies": {
+    "@wangeditor/editor": "^5.1.23",
+    "dom7": "^3.0.0",
+    "snabbdom": "^3.5.1",
+    "vue": "^3.3.4"
+  },
+  "dependencies": {
+    "lodash.throttle": "^4.1.1"
   }
 }
