--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sass": "^1.65.1",
     "snabbdom": "^3.5.1",
     "typescript": "~5.1.6",
+    "unplugin-element-plus": "^0.8.0",
     "vite": "^4.4.6",
     "vite-plugin-dts": "^2.3.0",
     "vue": "^3.3.4",
@@ -59,8 +60,10 @@
     "xml-formatter": "^3.5.0"
   },
   "peerDependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@wangeditor/editor": "^5.1.23",
     "dom7": "^3.0.0",
+    "element-plus": "^2.3.9",
     "snabbdom": "^3.5.1",
     "vue": "^3.3.4"
   },
