--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
+  "license": "Apache-2.0",
   "files": [
     "dist"
   ],
@@ -40,6 +41,8 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
+    "@vueuse/components": "^10.3.0",
+    "@vueuse/core": "^10.3.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "file:.yalc/@wangeditor/editor-for-vue",
     "dom7": "^3.0.0",
@@ -61,6 +64,8 @@
   },
   "peerDependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/components": "^10.3.0",
+    "@vueuse/core": "^10.3.0",
     "@wangeditor/editor": "^5.1.23",
     "dom7": "^3.0.0",
     "element-plus": "^2.3.9",
