--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
     "@wangeditor/editor": "^5.1.23",
-    "@wangeditor/editor-for-vue": "file:.yalc/@wangeditor/editor-for-vue",
+    "bootstrap": "^5.3.1",
     "dom7": "^3.0.0",
     "element-plus": "^2.3.9",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
+    "lodash.throttle": "^4.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "rollup-plugin-typescript2": "^0.35.0",
@@ -71,9 +72,5 @@
     "element-plus": "^2.3.9",
     "snabbdom": "^3.5.1",
     "vue": "^3.3.4"
-  },
-  "dependencies": {
-    "bootstrap": "^5.3.1",
-    "lodash.throttle": "^4.1.1"
   }
 }
