--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "element-plus": "^2.3.9",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
+    "event-emitter": "^0.3.5",
     "lodash.throttle": "^4.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
@@ -68,6 +69,7 @@
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
     "@wangeditor/editor": "^5.1.23",
+    "bootstrap": "^5.3.1",
     "dom7": "^3.0.0",
     "element-plus": "^2.3.9",
     "snabbdom": "^3.5.1",
