feat: 使用原始特性获取node

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,10 +36,12 @@
     "env.d.ts",
     "global.d.ts",
     "vite.config.ts",
+    "src/**/*",
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "example/**/*",
     "example/**/*.ts",
     "example/**/*.d.ts",
     "example/**/*.tsx",
