--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/ example/"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.1.0",
