feat: 设置启动端口

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     }
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5793",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
