feat: 更新vite配置,加速项目启动和热更新

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,8 @@
     "env.d.ts",
     "global.d.ts",
     "vite.config.ts",
+    "vite.config.dev.ts",
+    "vite.config.prod.ts",
     "src/**/*",
     "src/**/*.ts",
     "src/**/*.d.ts",
