--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node20": "^20.1.1",
-    "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^20.5.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -54,7 +53,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "event-emitter": "^0.3.5",
-    "lodash.throttle": "^4.1.1",
+    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "pinia": "^2.1.6",
     "prettier": "^3.0.0",
@@ -78,6 +77,7 @@
     "bootstrap": "^5.3.1",
     "dom7": "^3.0.0",
     "element-plus": "^2.3.9",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.6",
     "snabbdom": "^3.5.1",
     "vue": "^3.3.4",
