--- a/package.json
+++ b/package.json
@@ -82,16 +82,8 @@
   },
   "peerDependencies": {
     "@element-plus/icons-vue": "^2.1.0",
-    "@vueuse/components": "^10.3.0",
-    "@vueuse/core": "^10.3.0",
     "@wangeditor/editor": "^5.1.23",
-    "bootstrap": "^5.3.1",
-    "dom7": "^3.0.0",
     "element-plus": "^2.3.9",
-    "lodash": "^4.17.21",
-    "pinia": "^2.1.6",
-    "snabbdom": "^3.5.1",
-    "vue": "^3.3.4",
-    "xml2js": "^0.6.2"
+    "vue": "^3.3.4"
   }
 }
