--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ssml-editor",
+  "name": "@mekumiao/ssml-editor",
   "private": false,
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "基于wangeditor实现的支持SSML语法的编辑器",
   "keywords": [
     "SSML",
