--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "format": "prettier --write src/ example/"
   },
   "devDependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node20": "^20.1.1",
     "@types/node": "^20.5.0",
@@ -52,38 +51,36 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
-    "@vueuse/components": "^10.3.0",
-    "@vueuse/core": "^10.3.0",
-    "@wangeditor/editor": "^5.1.23",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.5",
     "bootstrap": "twbs/bootstrap#39030/head",
     "cnchar": "^3.2.4",
     "cnchar-poly": "^3.2.4",
-    "dom7": "^3.0.0",
-    "element-plus": "^2.3.9",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
-    "event-emitter": "^0.3.5",
-    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
-    "pinia": "^2.1.6",
     "prettier": "^3.0.0",
     "sass": "^1.65.1",
-    "snabbdom": "^3.5.1",
     "typescript": "~5.1.6",
     "unplugin-element-plus": "^0.8.0",
     "vite": "^4.4.6",
     "vite-plugin-dts": "^3.5.3",
+    "vue-tsc": "^1.8.6"
+  },
+  "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@types/lodash.sorteduniqby": "^4.7.7",
+    "@types/lodash.throttle": "^4.1.7",
+    "@vueuse/core": "^10.4.1",
+    "@wangeditor/editor": "^5.1.23",
+    "element-plus": "^2.3.12",
+    "event-emitter": "^0.3.5",
+    "lodash.sorteduniqby": "^4.7.0",
+    "lodash.throttle": "^4.1.1",
+    "pinia": "^2.1.6",
+    "snabbdom": "^3.5.1",
     "vue": "^3.3.4",
-    "vue-tsc": "^1.8.6",
     "xml-formatter": "^3.5.0",
     "xml2js": "^0.6.2"
-  },
-  "peerDependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "@wangeditor/editor": "^5.1.23",
-    "element-plus": "^2.3.9",
-    "vue": "^3.3.4"
   }
 }
