fix: 修复使用记录重复问题

--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@types/lodash.sorteduniqby": "^4.7.7",
     "@types/lodash.throttle": "^4.1.7",
+    "@types/lodash.uniqby": "^4.7.7",
     "@vueuse/core": "^10.4.1",
     "@wangeditor/editor": "^5.1.23",
     "element-plus": "^2.3.12",
     "event-emitter": "^0.3.5",
     "lodash.sorteduniqby": "^4.7.0",
     "lodash.throttle": "^4.1.1",
+    "lodash.uniqby": "^4.7.0",
     "pinia": "^2.1.6",
     "snabbdom": "^3.5.1",
     "vue": "^3.3.4",
