--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@vue/tsconfig": "^0.4.0",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.5",
-    "bootstrap": "twbs/bootstrap#39030/head",
     "cnchar": "^3.2.4",
     "cnchar-poly": "^3.2.4",
     "eslint": "^8.45.0",
@@ -69,11 +68,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@popperjs/core": "^2.11.8",
     "@types/lodash.sorteduniqby": "^4.7.7",
     "@types/lodash.throttle": "^4.1.7",
     "@types/lodash.uniqby": "^4.7.7",
     "@vueuse/core": "^10.4.1",
     "@wangeditor/editor": "^5.1.23",
+    "bootstrap": "github:twbs/bootstrap#39030/head",
     "element-plus": "^2.3.12",
     "event-emitter": "^0.3.5",
     "lodash.sorteduniqby": "^4.7.0",
