--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "@vue/tsconfig": "^0.4.0",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.5",
-    "cnchar": "^3.2.4",
-    "cnchar-poly": "^3.2.4",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "npm-run-all": "^4.1.5",
+    "pinyin-pro": "^3.16.4",
+    "pinyinize": "^3.3.1",
     "prettier": "^3.0.0",
     "sass": "^1.65.1",
     "typescript": "~5.1.6",
