--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node20": "^20.1.1",
+    "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.5.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -77,6 +78,7 @@
     "bootstrap": "github:twbs/bootstrap#39030/head",
     "element-plus": "^2.3.12",
     "event-emitter": "^0.3.5",
+    "lodash.merge": "^4.6.2",
     "lodash.sorteduniqby": "^4.7.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
