--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@popperjs/core": "^2.11.8",
+    "@types/lodash.isarray": "^4.0.7",
     "@types/lodash.merge": "^4.6.7",
+    "@types/lodash.mergewith": "^4.6.7",
     "@types/lodash.sorteduniqby": "^4.7.7",
     "@types/lodash.throttle": "^4.1.7",
     "@types/lodash.uniqby": "^4.7.7",
@@ -55,7 +57,9 @@
     "bootstrap": "github:twbs/bootstrap#39030/head",
     "element-plus": "^2.3.12",
     "event-emitter": "^0.3.5",
+    "lodash.isarray": "^4.0.0",
     "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
     "lodash.sorteduniqby": "^4.7.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
