--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mekumiao/ssml-editor",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": false,
   "description": "基于wangeditor实现的支持SSML语法的编辑器",
   "keywords": [
@@ -45,6 +45,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@popperjs/core": "^2.11.8",
+    "@types/lodash.debounce": "^4.0.8",
     "@types/lodash.merge": "^4.6.7",
     "@types/lodash.mergewith": "^4.6.7",
     "@types/lodash.sorteduniqby": "^4.7.7",
@@ -55,6 +56,7 @@
     "bootstrap": "^5.3.2",
     "element-plus": "^2.3.12",
     "event-emitter": "^0.3.5",
+    "lodash.debounce": "^4.0.8",
     "lodash.merge": "^4.6.2",
     "lodash.mergewith": "^4.6.2",
     "lodash.sorteduniqby": "^4.7.0",
