--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@popperjs/core": "^2.11.8",
     "@types/lodash.debounce": "^4.0.8",
     "@types/lodash.merge": "^4.6.7",
@@ -56,6 +57,7 @@
     "bootstrap": "^5.3.2",
     "element-plus": "^2.3.12",
     "event-emitter": "^0.3.5",
+    "highlight.js": "^11.9.0",
     "lodash.debounce": "^4.0.8",
     "lodash.merge": "^4.6.2",
     "lodash.mergewith": "^4.6.2",
